--- a/Capitulo15/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Capitulo15/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -27,15 +27,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyX-ru-v4h">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyX-ru-v4h">
                                             <rect key="frame" x="317" y="22" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2LW-m7-vUr">
-                                            <rect key="frame" x="16" y="38" width="31" height="15"/>
+                                            <rect key="frame" x="16" y="42.5" width="31" height="11"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -48,10 +47,13 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="2LW-m7-vUr" secondAttribute="bottom" constant="1" id="Oph-uJ-Eou"/>
-                                        <constraint firstItem="2LW-m7-vUr" firstAttribute="leading" secondItem="1ae-g6-RPF" secondAttribute="leadingMargin" id="RfE-nV-3dV"/>
-                                        <constraint firstItem="yiZ-41-6LD" firstAttribute="top" secondItem="1ae-g6-RPF" secondAttribute="topMargin" id="dGv-PY-jfU"/>
-                                        <constraint firstItem="yiZ-41-6LD" firstAttribute="leading" secondItem="1ae-g6-RPF" secondAttribute="leadingMargin" id="wal-qC-u8h"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="2LW-m7-vUr" secondAttribute="bottom" constant="0.5" id="7g9-cu-c8E"/>
+                                        <constraint firstItem="2LW-m7-vUr" firstAttribute="leading" secondItem="yiZ-41-6LD" secondAttribute="leading" id="Xsn-vp-J66"/>
+                                        <constraint firstItem="yiZ-41-6LD" firstAttribute="leading" secondItem="1ae-g6-RPF" secondAttribute="leadingMargin" id="bhk-F7-PVg"/>
+                                        <constraint firstItem="2LW-m7-vUr" firstAttribute="top" secondItem="yiZ-41-6LD" secondAttribute="bottom" constant="10.5" id="eOl-vA-dIz"/>
+                                        <constraint firstItem="yiZ-41-6LD" firstAttribute="top" secondItem="1ae-g6-RPF" secondAttribute="topMargin" id="fEj-vF-8gG"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="tyX-ru-v4h" secondAttribute="trailing" id="fMY-3C-iwQ"/>
+                                        <constraint firstItem="tyX-ru-v4h" firstAttribute="centerY" secondItem="1ae-g6-RPF" secondAttribute="centerY" id="p0F-cp-W7C"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -88,7 +90,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cSZ-rA-9zO">
-                                <rect key="frame" x="10" y="72" width="355" height="587"/>
+                                <rect key="frame" x="10" y="72" width="355" height="543"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="RZH-Sv-sVp">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
@@ -151,24 +153,43 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M5-EM-TKx">
-                                        <rect key="frame" x="0.0" y="114" width="355" height="473"/>
+                                        <rect key="frame" x="0.0" y="114" width="355" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="JOF-kH-Ndz">
+                                        <rect key="frame" x="0.0" y="142.5" width="355" height="400.5"/>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="K4B-sW-q00" firstAttribute="leading" secondItem="agR-fV-KGl" secondAttribute="leading" id="IXf-rH-kKM"/>
                                     <constraint firstItem="O0F-Fs-A8I" firstAttribute="leading" secondItem="agR-fV-KGl" secondAttribute="leading" id="rFB-3i-U2V"/>
                                 </constraints>
                             </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5J3-Bc-J9D">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="slf-wL-6gP"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="9mb-NY-SaM">
+                                        <connections>
+                                            <action selector="takePicture:" destination="gky-J8-lWQ" id="KsE-PR-U1E"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="cSZ-rA-9zO" firstAttribute="leading" secondItem="uJm-Ht-YjH" secondAttribute="leading" constant="10" id="BIU-vT-duB"/>
+                            <constraint firstItem="5J3-Bc-J9D" firstAttribute="top" secondItem="cSZ-rA-9zO" secondAttribute="bottom" constant="8" id="L79-qM-Gmn"/>
                             <constraint firstItem="uJm-Ht-YjH" firstAttribute="trailing" secondItem="cSZ-rA-9zO" secondAttribute="trailing" constant="10" id="Liv-nA-8t4"/>
-                            <constraint firstItem="uJm-Ht-YjH" firstAttribute="bottom" secondItem="cSZ-rA-9zO" secondAttribute="bottom" constant="8" id="d2b-Vs-UkB"/>
+                            <constraint firstItem="5J3-Bc-J9D" firstAttribute="trailing" secondItem="uJm-Ht-YjH" secondAttribute="trailing" id="U5m-hd-kMm"/>
+                            <constraint firstItem="5J3-Bc-J9D" firstAttribute="leading" secondItem="uJm-Ht-YjH" secondAttribute="leading" id="cc6-O9-1pj"/>
+                            <constraint firstItem="5J3-Bc-J9D" firstAttribute="bottom" secondItem="uJm-Ht-YjH" secondAttribute="bottom" id="gWb-r0-l35"/>
                             <constraint firstItem="cSZ-rA-9zO" firstAttribute="top" secondItem="uJm-Ht-YjH" secondAttribute="top" constant="8" id="m7Z-Pg-kYb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uJm-Ht-YjH"/>
@@ -178,6 +199,7 @@
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="8M5-EM-TKx" id="PEh-jb-z3A"/>
+                        <outlet property="imageView" destination="JOF-kH-Ndz" id="7pf-ce-qrX"/>
                         <outlet property="nameField" destination="K4B-sW-q00" id="HMt-g5-cnp"/>
                         <outlet property="serialNumberField" destination="agR-fV-KGl" id="Rzf-bL-Tar"/>
                         <outlet property="valueField" destination="O0F-Fs-A8I" id="8o4-j7-ItW"/>
